Mon Dec  1 23:51:32 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h: When defining ACE_*_FORMAT_SPECIFIER in terms
          of ACE_*_FORMAT_SPECIFIER_ASCII, use ACE_TEXT_CHAR_TO_TCHAR else
          when used, this ends up combining narrow and wide chars, resulting
          in build errors.

Mon Dec  1 17:55:00 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_timed_complete): Correct the situations under
          which a non-blocking connect() will complete. Previously VxWorks and
          AIX did a secondary check for connect success/fail when the socket
          selected writeable. All other non-Windows platforms selected for
          both readable and writeable, with readable=fail, writeable=success.
          This produced false success since BSD sockets always select
          writeable, not readable; a secondary check for status is then
          required. This fix corrects behavior on non-AIX BSD systems,
          particularly HP-UX and Solaris.

Tue Nov 18 19:06:27 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/README: Updated the explanation of how to build/run the
          one-button regression tests.  Thanks to Anand Kumar
          <anandkumar95 at gmail dot com> for motivating this.

Mon Dec  1 15:36:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Updated MPC mode for emacs file. Thanks to Jules Colding
          <colding at 42tools dot com> for providing this file

Mon Dec  1 14:07:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Updated MPC mode for emacs file. Thanks to Jules Colding
          <colding at 42tools dot com> for providing this file

Mon Dec  1 13:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Object_Manager.cpp:
          Initialise pointers with 0

        * ace/RW_Mutex.cpp:
        * ace/RW_Mutex.h:
        * ace/RW_Mutex.inl: